argocd/apps/infra/storage/longhorn/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: longhorn-app
  name: longhorn-httproute
  namespace: longhorn
spec:
  hostnames:
  - longhorn.yanello.net
  rules:
  - backendRefs:
    - name: longhorn-frontend
      namespace: longhorn
      port: 80
      weight: 0
